fix priority align on todoAddCard

--- a/src/CSS-files/todoAddCard.css
+++ b/src/CSS-files/todoAddCard.css
@@ -42,6 +42,7 @@
     border-radius: 5px;
     display: flex;
     place-content: center;
+    place-items: center;
     padding: 1rem;
 }
 
